ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uniunity-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: uniunity.store
    http:
      paths:
      - path: /partner
        pathType: Prefix
        backend:
          service:
            name: partner-service
            port:
              number: 3003
      - path: /retailer
        pathType: Prefix
        backend:
          service:
            name: partner-service
            port:
              number: 3003
      - path: /user
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 3004
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 3004
      - path: /university
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 3004
      - path: /post
        pathType: Prefix
        backend:
          service:
            name: post-service
            port:
              number: 3000
